tests/ui/keyword/keyword-super-as-identifier.stderr
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> $DIR/keyword-super-as-identifier.rs:2:9
   |
LL |     let super = 22;
   |         ^^^^^ there are too many leading `super` keywords

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
