tests/ui/keyword/keyword-super-as-identifier.rs
fn main() {
    let super = 22; //~ ERROR failed to resolve: there are too many leading `super` keywords
}
